<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homePage"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/home_icon"
        android:title="@string/home"/>
    <item
        android:id="@+id/listPage"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/list_icon"
        android:title="@string/people"/>
    <item
        android:id="@+id/donatePage"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/donate_icon"
        android:title="@string/donate"/>
    <item
        android:id="@+id/aboutPage"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/about_us_icon"
        android:title="@string/aboutUs"/>
    <item
        android:id="@+id/settingPage"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/settings_icon"
        android:title="@string/settings"/>
</menu>