<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:paddingTop="8dp"
    android:paddingEnd="8dp"
    android:paddingStart="8dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:background="@android:color/white"
        android:contentDescription="@string/contentDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/aboutUSLabel"
                style="@style/headerTextStyle"
                android:text="@string/aboutUs" />

            <TextView
            android:id="@+id/aboutNH"
            style="@style/bodyTextStyle"
            android:text="@string/aboutNewHope" />

            <TextView
                android:id="@+id/cFGKLinkHeader"
                style="@style/headerTextStyle"
                android:text="@string/centerOfGrievingChildren" />


            <TextView
                android:id="@+id/cFGCAbout"
                style="@style/bodyTextStyle"
                android:text="@string/grievingChildrenAbout" />

            <TextView
                android:id="@+id/wFkLinkHeader"
                style="@style/headerTextStyle"
                android:text="@string/wishForKids" />

            <TextView
                android:id="@+id/aboutWFK"
                style="@style/bodyTextStyle"
                android:text="@string/wishForKidsAbout" />

            <TextView
                android:id="@+id/fundingAbout"
                style="@style/bodyTextStyle"
                android:text="@string/fundingAbout" />
            <TextView
                android:id="@+id/sponsorTV"
                style="@style/bodyTextStyle"
                android:text="@string/sponsorLink" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>